# PerchQt

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Assets/: resources.qrc
src/Models/: Game.cpp  Game.h  GameListModel.cpp  GameListModel.h
src/UI/: ControllerConfigView.ui  GameListView.ui  GameWidgetView.ui  MainWindow.ui  SettingsDialog.ui
src/Utils/: PlaceholderImage.cpp  PlaceholderImage.h  Themes.cpp  Themes.h
src/ViewModels/: GameListViewModel.cpp  GameListViewModel.h
src/Views/: ControllerConfigView.cpp  ControllerConfigView.h  GameListView.cpp  GameListView.h  GameWidgetView.cpp  GameWidgetView.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/Widgets/: MarqueeLabel.cpp  MarqueeLabel.h
